examples/neg/lambdas/simpleescape.effekt
effect Raise(msg: String): Unit
effect Flip(): Bool

def main() = {

  try {
    def block(msg: String): Unit / {} = { do Raise(msg) }
    val f = if (do Flip()) {
      box { block("first") }
    } else {
      box { block("second") }
    }
    f
  } with Raise { msg =>
    println("exception" ++ msg); resume(())
  } with Flip {
    resume(true); resume(false)
  }

}
